--- a/style.css
+++ b/style.css
@@ -73,3 +73,37 @@ body{
     width: 556px;
     height: 438px;
 }
+
+/* main css */
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 85px;
+}
+
+/* player section css */
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 27px;
+}
+.player{
+    padding: 15px 15px 33px 15px;
+    box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+}
+figure img{
+    width: 300px;
+    height: 256px;
+    margin-bottom: 16px;
+}
+figure figcaption{
+    color: #18191f;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.player p{
+    color: #6c6c6c;
+} */
