--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ figure figcaption{
 .newsletter{
     background: #2d25a0;
     height: 550px;
-    background-image: linear-gradient(112deg, #ffffffdc 50%, transparent 50%), linear-gradient(rgba(0, 0, 0, 0.651), black), url(images/messi.jpg);
+    background-image: linear-gradient(112deg, #ffffffdc 50%, transparent 50%), linear-gradient(rgba(0, 0, 0, 0.651), black), url(..images/messi.jpg);
     background-position: top right;
     padding: 4rem;
 }
@@ -189,4 +189,158 @@ footer img{
 footer p{
     font-size: 18px;
     margin-bottom: 64px;
+}
+
+/*..... media queries...... */
+
+/* for phones */
+@media only screen and (max-width: 688px) {
+    main{
+        margin-bottom: 47px;
+        padding: 0 15px;
+    }
+    .container{
+        width: 100%;
+    }
+    /* header */
+    .header-content{
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        padding: 4rem 0;
+    }
+    .header-content-info{
+        margin-bottom: 50px;
+        width: 80%;
+    }
+    .header-content-info h1{
+        font-size: 36px;
+    }
+    .header-content-img{
+        width: auto;
+    }
+    .header-content-img img{
+        width: 329px;
+        height: 259px;
+    }
+
+    /* players section */
+    .players{
+        display: grid;
+        grid-template-columns: repeat(1, 330px);
+        grid-row-gap: 24px;
+        justify-content: center;
+    }
+
+    /* newsletter section */
+    .newsletter-section{
+        margin-top: 47px;
+    }
+    .newsletter{
+        height: auto;
+        background-image: linear-gradient(112deg, #ffffffdc 50%, #ffffffdc 50%), linear-gradient(rgba(0, 0, 0, 0.451)), url(..images/messi.jpg);
+        padding: 1rem;
+    }
+    form{
+        width: 100%;
+        height: auto;
+    }
+
+    /* footer */
+    footer img{
+        width: 250;
+        height: 63px;
+    }
+}
+/* for tablets */
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+    main{
+        margin-bottom: 47px;
+        padding: 0 15px;
+    }
+    .container{
+        width: 100%;
+    }
+    /* header */
+    .header-content{
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        padding: 4rem 0;
+    }
+    .header-content-info{
+        margin-bottom: 50px;
+        width: 80%;
+    }
+    .header-content-info h1{
+        font-size: 50px;
+    }
+    .header-content-img{
+        width: auto;
+    }
+    .header-content-img img{
+        width: 429px;
+        height: 359px;
+    }
+
+    /* players section */
+    .players{
+        display: grid;
+        grid-template-columns: repeat(2, 330px);
+        grid-row-gap: 24px;
+        justify-content: center;
+    }
+
+    /* newsletter section */
+    .newsletter-section{
+        margin-top: 47px;
+    }
+    .newsletter{
+        height: auto;
+        background-image: linear-gradient(112deg, #ffffffdc 50%, #ffffffdc 50%), linear-gradient(rgba(0, 0, 0, 0.451)), url(..images/messi.jpg);
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
+        padding: 2rem 0;
+    }
+    form{
+        width: 50%;
+        height: auto;
+    }
+
+    /* footer */
+    footer img{
+        width: 250;
+        height: 63px;
+    }
+    
+}
+
+@media only screen and (min-width:993px) and (max-width: 1200px) {
+    .container{
+        width: 100%;
+    }
+    .header-content-img img{
+        width: 430px;
+        height: auto;
+        margin-left: 3.5rem;
+    }
+    .header-content-info h1{
+        margin-left: 4rem;
+    }
+    .header-content-info a{
+        margin-left: 4rem;
+    }
+
+    /* player */
+    .players{
+        display: grid;
+        grid-template-columns: repeat(3, 305px);
+        justify-content: center;
+    }
+    figure img{
+        width: 100%;
+        height: auto;
+        margin-bottom: 16px;
+    }
 }
